# serial

./: magonote.py  pyproject.toml  train.py  train1.py  train2.py  train3.py
